force-app/main/default/objects/Objection__c/Objection__c.object-meta.xml
<CustomObject>
    <label>Objection</label>
    <nameField>
        <displayFormat>OBJ-{00000}</displayFormat>
        <label>Objection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>