force-app/main/default/objects/Objection__c/fields/Objection_Type__c.field-meta.xml
<CustomField>
    <fullName>Objection_Type__c</fullName>
    <label>Objection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document Discrepancy</fullName>
            </value>
            <value>
                <fullName>Address Mismatch</fullName>
            </value>
            <value>
                <fullName>Name Mismatch</fullName>
            </value>
            <value>
                <fullName>Police Verification Adverse</fullName>
            </value>
            <value>
                <fullName>Court Order</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>